--- a/docs-to-pdf-converter/src/docx4j.properties
+++ b/docs-to-pdf-converter/src/docx4j.properties
@@ -1,1 +1,3 @@
 docx4j.Log4j.Configurator.disabled=true
+logging.level.org.docx4j=OFF
+logging.level.org.docx4j.model.datastorage.migration.VariablePrepare=OFF
